Fix Featured Product and Featured Category button alignment (https://github.com/woocommerce/woocommerce-blocks/pull/4028)

--- a/plugins/woocommerce-blocks/assets/js/blocks/featured-category/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/featured-category/style.scss
@@ -82,6 +82,10 @@
 		}
 	}
 
+	.wp-block-button.aligncenter {
+		text-align: center;
+	}
+
 	&.has-background-dim::before {
 		content: "";
 		position: absolute;
