--- a/plugins/woocommerce-blocks/assets/js/blocks/featured-product/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/featured-product/style.scss
@@ -94,6 +94,10 @@
 		}
 	}
 
+	.wp-block-button.aligncenter {
+		text-align: center;
+	}
+
 	&.has-background-dim::before {
 		content: "";
 		position: absolute;
